# lumen-node

./: .gitignore  .graphify_ast.json  .graphify_ast.py  .graphify_cachecheck.py  .graphify_incremental.json  .graphify_semantic_extract.py  .graphify_uncached.txt  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  next.md
.cursor/agents/: readme-keeper.md  refactor-architect.md
.github/: copilot-instructions.md
data/: com.lumennode.app.desktop  com.lumennode.app.metainfo.xml
docs/: manual-smoke.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json
pack/: README.md
pack/rust-gtk4-starter/: .gitignore  Cargo.toml  Makefile  PITFALLS.md  README.md
pack/rust-gtk4-starter/.cargo/: config.toml
pack/rust-gtk4-starter/data/: com.example.GtkStarter.desktop  com.example.GtkStarter.metainfo.xml
pack/rust-gtk4-starter/packaging/: audit-appdir.sh  build-appimage.sh
pack/rust-gtk4-starter/scripts/: init-project.sh  release-preflight.sh
pack/rust-gtk4-starter/src/: main.rs  messages.rs  worker.rs
pack/rust-gtk4-starter/src/ui/: mod.rs  runtime.rs  shell.rs
packaging/: build-appimage.sh
scripts/: release-preflight.sh
src/: byte_format.rs  config.rs  db.rs  dialogs.rs  file_name_ops.rs  icons.rs  image_types.rs  json_tree.rs  main.rs  metadata.rs  metadata_section.rs  metadata_view.rs  recent_folders.rs  scan.rs  scanner.rs  similarity.rs  sort.rs  sort_flags.rs  thumbnail_sizing.rs  thumbnails.rs  timing_report.rs  tree_sidebar.rs  updater.rs  view_helpers.rs  window_math.rs
src/core/: app_state.rs  (+2 more)
(+35 files in other folders)
