[package]
name = "lumen-node"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
gdk-pixbuf = "0.20"
kamadak-exif = "0.6"
png = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-channel = "2"
md-5 = "0.10"