[package]
name = "gtk-starter"
version = "0.1.0"
edition = "2021"
description = "Production-oriented GTK4 + libadwaita starter (from LumenNode pack)"
license = "MIT"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10", "v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
async-channel = "2"
